--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -7,7 +7,6 @@
     "# PyCity Schools Analysis\n",
     "\n",
     " \n",
-    "The analysis reveals several key patterns:\n",
     "\n",
     "Despite variations in grade levels, the scores in each school tend to be similar across all categories. This suggests a certain level of consistency in academic performance within individual schools.\n",
     "\n",
@@ -16,7 +15,7 @@
     "\n",
     "Charter schools outperform District schools in both average scores and passing rates. The top 5 performing schools are Charter schools, while the bottom 5 are District schools. This highlights a notable disparity in academic achievement between Charters schools and District Schools.\n",
     "\n",
-    "Contrary to the laws of economics, higher spending of over $645 does not necessarily lead to better academic results. Schools spending below $585 have a higher overall passing rate compared to those with higher spending. This challenges the assumption that increased spending correlates directly with improved academic performance.\n",
+    "Spending over $645 does not necessarily lead to better academic results. Schools spending below $585 have a higher overall passing rate compared to those with higher spending. This challenges the assumption that increased spending correlates directly with improved academic performance.\n",
     "\n",
     "In summary, the analysis highlights the many factors such as school size, charter vs. district, and spending on academic outcomes. More is needed to fully understand the impact these factors have to be able to formulate effective strategies for improving educational performance.\n",
     "\n",
