--- a/PyCitySchools_starter.ipynb
+++ b/PyCitySchools_starter.ipynb
@@ -6,18 +6,17 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    " \n",
-    "\n",
     "Despite variations in grade levels, the scores in each school tend to be similar across all categories. This suggests a certain level of consistency in academic performance within individual schools.\n",
     "\n",
-    "Schools with larger student populations generally perform poorly in math, and slightly better in reading. Schools with a size of 2000 or lower consistently achieve higher passing rates compared to those with student populations exceeding 2000.\n",
-    "Smaller and medium-sized schools demonstrate better overall performance compared to larger schools. The overall passing rates for small and medium schools are 89.88 and 90.06, respectively, whereas larger schools have a notably lower overall passing rate of 58.29.\n",
+    "Schools with larger student populations generally perform poorly in math, and slightly better in reading. Schools with a size of 2000 or lower consistently achieve higher passing rates compared to those with student populations exceeding two thousand.\n",
+    "Smaller and medium-sized schools show better overall performance compared to larger schools. The overall passing rates for small and medium schools are 89.88 and 90.06, respectively, while larger schools have a notably lower overall passing rate of 58.29.\n",
     "\n",
-    "Charter schools outperform District schools in both average scores and passing rates. The top 5 performing schools are Charter schools, while the bottom 5 are District schools. This highlights a notable disparity in academic achievement between Charters schools and District Schools.\n",
+    "Charter schools outperform District schools in both average scores and passing rates. The top five performing schools are Charter schools, while the bottom five schools are District schools. This highlights a notable disparity in academic achievement between Charters schools and District Schools.\n",
     "\n",
-    "Spending more per student for example $645 does not necessarily lead to better passing results. Schools spending below $585 have a higher overall passing rate compared to those with higher spending. This challenges the assumption that increased spending correlates directly with improved academic performance.\n",
+    "Spending more per student, for example six hundred and forty-five dollars, does not necessarily lead to better passing results. Schools spending below five hundred and eight five dollars have a higher overall passing rate compared to those with higher spending. This challenges the assumption that increased spending correlates directly with improved academic performance.\n",
     "\n",
-    "In summary, the analysis highlights the many factors such as school size, charter vs. district, and spending on academic outcomes. More is needed to fully understand the impact these factors have to be able to formulate effective strategies for improving educational performance.\n",
+    "In summary, the analysis highlights how factors such as school size, charter vs. district, and spending on academic outcomes. More is needed to fully understand the impact these factors have to be able to formulate effective strategies for improving educational performance.\n",
+    "\n",
     "\n",
     "\n",
     "\n",
